src/css/App.css
/* Light theme */
.light-theme {
  /* General */
  --background-color: #e4f0ee;
  --text-color: #000000;

  /* Block */
  --block-background-color: radial-gradient(
    81.02% 81.02% at 62.5% -38.41%,
    rgba(87, 206, 243, 0.38) 0%,
    #56c0a7 33.33%,
    #56c0a8 66.67%,
    #56c0a7 100%
  );
  --block-background-hover-color: radial-gradient(
    81.02% 81.02% at 62.5% -38.41%,
    rgba(87, 206, 243, 0.38) 0%,
    #56c0a7 33.33%,
    #56c0a8 66.67%,
    #56c0a7 100%
  );
  --block-hover-shadow: 0 0 20px #17eb17;

  /* Footer */
  --footer-background-color: rgb(240, 225, 208);

  /* Dark Mode Button */
  --dark-mode-btn-color: #cfc4c4;
  --dark-mode-btn-hover: 0 0 15px #17eb17;

  /* Comprehend */
  --comprehend-txt-field-border: #2684FF;
  --comprehend-btn-color: #37bf84;
  --comprehend-med-btn-color: #ff0000;
  --comprehend-btn-hover-color: #00ff90;
  --comprehend-med-btn-hover-color: #FF495C;
}

/* Dark Theme */
.dark-theme {
  /* General */
  --background-color: #121212;
  --text-color: #ffffff;

  /* Block */
  --block-background-color: linear-gradient(
    360deg,
    #055f4e -23.6%,
    #56c0a7 151.6%
  );
  --block-background-hover-color: radial-gradient(
    81.02% 81.02% at 62.5% -38.41%,
    rgba(87, 206, 243, 0.38) 0%,
    #56c0a7 33.33%,
    #56c0a8 66.67%,
    #56c0a7 100%
  );
  --block-hover-shadow: 0 0 20px #17eb17;

  /* Footer */
  --footer-background-color: rgb(240, 225, 208);

  /* Dark Mode Button */
  --dark-mode-btn-color: #5a5757;
  --dark-mode-btn-hover: 0 0 15px #17eb17;

  /* Comprehend */
  --comprehend-txt-field-border: #2684FF;
  --comprehend-btn-color: #386510;
  --comprehend-med-btn-color: #651210;
  --comprehend-btn-hover-color: #6fd812;
  --comprehend-med-btn-hover-color: #dc2420;
}

#app {
  background-size: 100%;
  min-width: 100%;
  min-height: 100%;
}

html {
  background: var(--background-color);
}

